// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`UsersView > Show list with moderation 1`] = `
"<div data-v-01123d3b="">
  <breadcrumbs-nav data-v-01123d3b="" links="[object Object],[object Object]"></breadcrumbs-nav>
  <div data-v-01123d3b="">
    <form data-v-01123d3b="">
      <div data-v-01123d3b="" data-oruga="field" class="o-field mb-5" group-multiline="">
        <!---->
        <div class="o-field__body">
          <div class="o-field o-field--grouped">
            <p data-v-01123d3b="" class="control mb-3 m-auto">
            <div data-v-01123d3b="" data-oruga="checkbox" class="o-checkbox"><input aria-labelledby="v-0-0" id="v-0-8" type="checkbox" data-oruga-input="checkbox" class="o-checkbox__input" true-value="true" false-value="false" autocomplete="off" aria-checked="false"><label id="v-0-0" for="v-0-8" class="o-checkbox__label">Users pending for moderation</label></div>
            </p>
            <div data-v-01123d3b="" data-oruga="field" class="o-field" expanded=""><label id="v-0-2" class="o-field__label" for="v-0-4">Email</label>
              <div data-v-01123d3b="" data-oruga="input" class="o-input"><span data-oruga="icon" class="o-icon o-input__icon-left"><i class="mdi mdi-email mdi-24px"></i></span><input aria-labelledby="v-0-2" trap-focus="" id="v-0-4" type="text" data-oruga-input="text" class="o-input__input o-input__input--iconspace-left o-input__input--placeholder" autocomplete="off">
                <!---->
                <!---->
              </div>
              <!---->
            </div>
            <div data-v-01123d3b="" data-oruga="field" class="o-field" expanded=""><label id="v-0-5" class="o-field__label" for="v-0-7">IP Address</label>
              <div data-v-01123d3b="" data-oruga="input" class="o-input"><span data-oruga="icon" class="o-icon o-input__icon-left"><i class="mdi mdi-web mdi-24px"></i></span><input aria-labelledby="v-0-5" id="v-0-7" type="text" data-oruga-input="text" class="o-input__input o-input__input--iconspace-left o-input__input--placeholder" autocomplete="off">
                <!---->
                <!---->
              </div>
              <!---->
            </div>
            <p data-v-01123d3b="" class="control self-end mb-0"><button data-v-01123d3b="" data-oruga="button" type="button" role="button" tabindex="0" class="o-button o-button--primary"><span class="o-button__wrapper"><!----><span class="o-button__label">Filter</span>
                <!----></span>
              </button></p>
          </div>
        </div>
        <!---->
      </div>
    </form>
    <div data-v-01123d3b="" data-oruga="table" class="o-table__root">
      <div style="display: none;"><span data-v-01123d3b="" data-oruga="table-column" data-id="table-1"> <!----></span><span data-v-01123d3b="" data-oruga="table-column" data-id="table-2">Email <!----></span><span data-v-01123d3b="" data-oruga="table-column" data-id="table-3" centered="true">Last seen on <!----></span><span data-v-01123d3b="" data-oruga="table-column" data-id="table-4" centered="true">Language <!----></span></div>
      <!---->
      <!---->
      <div class="o-table__wrapper">
        <table debounce-search="500" class="o-table" aria-rowcount="3" aria-colcount="4">
          <!---->
          <thead>
            <tr aria-rowindex="1">
              <!---->
              <!---->
              <th class="o-table__th" style="width: 40px;" draggable="false" aria-colindex="1"><span class="o-table__th__label"></span>
                <!---->
              </th>
              <th class="o-table__th" draggable="false" aria-colindex="2"><span class="o-table__th__label">Email</span>
                <!---->
              </th>
              <th class="o-table__th" draggable="false" aria-colindex="3"><span class="o-table__th__label">Last seen on</span>
                <!---->
              </th>
              <th class="o-table__th" draggable="false" aria-colindex="4"><span class="o-table__th__label">Language</span>
                <!---->
              </th>
              <!---->
            </tr>
            <!---->
            <!---->
          </thead>
          <tbody>
            <tr class="" draggable="false" aria-rowindex="2">
              <!---->
              <!---->
              <td class="o-table__td" style="width: 40px;">6</td>
              <td class="o-table__td" data-label="Email"><a data-v-01123d3b="" href="/settings/admin/users/6" class="">truc@mobilizon.test</a></td>
              <td class="o-table__td" data-label="Last seen on"><time data-v-01123d3b="">Thursday, January 1, 1970 at 1:00 AM</time></td>
              <td class="o-table__td" data-label="Language">English</td>
              <!---->
            </tr>
            <!---->
            <tr class="" draggable="false" aria-rowindex="3">
              <!---->
              <!---->
              <td class="o-table__td" style="width: 40px;">1</td>
              <td class="o-table__td" data-label="Email"><a data-v-01123d3b="" href="/settings/admin/users/1" class="">admin@mobilizon.test</a></td>
              <td class="o-table__td" data-label="Last seen on"><time data-v-01123d3b="" datetime="2025-09-11T16:10:03Z">Thursday, September 11, 2025 at 6:10 PM</time></td>
              <td class="o-table__td" data-label="Language">English</td>
              <!---->
            </tr>
            <!---->
            <!---->
          </tbody>
          <!---->
        </table>
        <transition-stub name="fade" appear="false" persisted="false" css="true">
          <!---->
        </transition-stub>
      </div>
      <div class="o-table__pagination">
        <div></div>
        <div>
          <nav data-oruga="pagination" class="o-pagination o-pagination--right o-pagination--right o-pagination--small"><button type="button" role="button" disabled="" class="o-pagination__button-previous o-pagination__button--disabled o-pagination__button" aria-label="Previous page" aria-current="false"><span data-oruga="icon" class="o-icon" aria-hidden="true"><i class="mdi mdi-chevron-left mdi-24px"></i></span></button><button type="button" role="button" disabled="" class="o-pagination__button-next o-pagination__button--disabled o-pagination__button" aria-label="Next page" aria-current="false"><span data-oruga="icon" class="o-icon" aria-hidden="true"><i class="mdi mdi-chevron-right mdi-24px"></i></span></button>
            <ul class="o-pagination__list">
              <!---->
              <!---->
              <li class="o-pagination__item"><button type="button" role="button" tabindex="0" class="o-pagination__button o-pagination__button--current" aria-label="Current page, Page 1." aria-current="true">1</button></li>
              <!---->
              <!---->
            </ul>
          </nav>
        </div>
      </div>
    </div>
  </div>
</div>"
`;

exports[`UsersView > Show simple list 1`] = `
"<div data-v-01123d3b="">
  <breadcrumbs-nav data-v-01123d3b="" links="[object Object],[object Object]"></breadcrumbs-nav>
  <div data-v-01123d3b="">
    <form data-v-01123d3b="">
      <div data-v-01123d3b="" data-oruga="field" class="o-field mb-5" group-multiline="">
        <!---->
        <div class="o-field__body">
          <div class="o-field o-field--grouped">
            <!--v-if-->
            <div data-v-01123d3b="" data-oruga="field" class="o-field" expanded=""><label id="v-0-2" class="o-field__label" for="v-0-4">Email</label>
              <div data-v-01123d3b="" data-oruga="input" class="o-input"><span data-oruga="icon" class="o-icon o-input__icon-left"><i class="mdi mdi-email mdi-24px"></i></span><input aria-labelledby="v-0-2" trap-focus="" id="v-0-4" type="text" data-oruga-input="text" class="o-input__input o-input__input--iconspace-left o-input__input--placeholder" autocomplete="off">
                <!---->
                <!---->
              </div>
              <!---->
            </div>
            <div data-v-01123d3b="" data-oruga="field" class="o-field" expanded=""><label id="v-0-5" class="o-field__label" for="v-0-7">IP Address</label>
              <div data-v-01123d3b="" data-oruga="input" class="o-input"><span data-oruga="icon" class="o-icon o-input__icon-left"><i class="mdi mdi-web mdi-24px"></i></span><input aria-labelledby="v-0-5" id="v-0-7" type="text" data-oruga-input="text" class="o-input__input o-input__input--iconspace-left o-input__input--placeholder" autocomplete="off">
                <!---->
                <!---->
              </div>
              <!---->
            </div>
            <p data-v-01123d3b="" class="control self-end mb-0"><button data-v-01123d3b="" data-oruga="button" type="button" role="button" tabindex="0" class="o-button o-button--primary"><span class="o-button__wrapper"><!----><span class="o-button__label">Filter</span>
                <!----></span>
              </button></p>
          </div>
        </div>
        <!---->
      </div>
    </form>
    <div data-v-01123d3b="" data-oruga="table" class="o-table__root">
      <div style="display: none;"><span data-v-01123d3b="" data-oruga="table-column" data-id="table-1"> <!----></span><span data-v-01123d3b="" data-oruga="table-column" data-id="table-2">Email <!----></span><span data-v-01123d3b="" data-oruga="table-column" data-id="table-3" centered="true">Last seen on <!----></span><span data-v-01123d3b="" data-oruga="table-column" data-id="table-4" centered="true">Language <!----></span></div>
      <!---->
      <!---->
      <div class="o-table__wrapper">
        <table debounce-search="500" class="o-table" aria-rowcount="3" aria-colcount="4">
          <!---->
          <thead>
            <tr aria-rowindex="1">
              <!---->
              <!---->
              <th class="o-table__th" style="width: 40px;" draggable="false" aria-colindex="1"><span class="o-table__th__label"></span>
                <!---->
              </th>
              <th class="o-table__th" draggable="false" aria-colindex="2"><span class="o-table__th__label">Email</span>
                <!---->
              </th>
              <th class="o-table__th" draggable="false" aria-colindex="3"><span class="o-table__th__label">Last seen on</span>
                <!---->
              </th>
              <th class="o-table__th" draggable="false" aria-colindex="4"><span class="o-table__th__label">Language</span>
                <!---->
              </th>
              <!---->
            </tr>
            <!---->
            <!---->
          </thead>
          <tbody>
            <tr class="" draggable="false" aria-rowindex="2">
              <!---->
              <!---->
              <td class="o-table__td" style="width: 40px;">6</td>
              <td class="o-table__td" data-label="Email"><a data-v-01123d3b="" href="/settings/admin/users/6" class="">truc@mobilizon.test</a></td>
              <td class="o-table__td" data-label="Last seen on"><time data-v-01123d3b="">Thursday, January 1, 1970 at 1:00 AM</time></td>
              <td class="o-table__td" data-label="Language">English</td>
              <!---->
            </tr>
            <!---->
            <tr class="" draggable="false" aria-rowindex="3">
              <!---->
              <!---->
              <td class="o-table__td" style="width: 40px;">1</td>
              <td class="o-table__td" data-label="Email"><a data-v-01123d3b="" href="/settings/admin/users/1" class="">admin@mobilizon.test</a></td>
              <td class="o-table__td" data-label="Last seen on"><time data-v-01123d3b="" datetime="2025-09-11T16:10:03Z">Thursday, September 11, 2025 at 6:10 PM</time></td>
              <td class="o-table__td" data-label="Language">English</td>
              <!---->
            </tr>
            <!---->
            <!---->
          </tbody>
          <!---->
        </table>
        <transition-stub name="fade" appear="false" persisted="false" css="true">
          <!---->
        </transition-stub>
      </div>
      <div class="o-table__pagination">
        <div></div>
        <div>
          <nav data-oruga="pagination" class="o-pagination o-pagination--right o-pagination--right o-pagination--small"><button type="button" role="button" disabled="" class="o-pagination__button-previous o-pagination__button--disabled o-pagination__button" aria-label="Previous page" aria-current="false"><span data-oruga="icon" class="o-icon" aria-hidden="true"><i class="mdi mdi-chevron-left mdi-24px"></i></span></button><button type="button" role="button" disabled="" class="o-pagination__button-next o-pagination__button--disabled o-pagination__button" aria-label="Next page" aria-current="false"><span data-oruga="icon" class="o-icon" aria-hidden="true"><i class="mdi mdi-chevron-right mdi-24px"></i></span></button>
            <ul class="o-pagination__list">
              <!---->
              <!---->
              <li class="o-pagination__item"><button type="button" role="button" tabindex="0" class="o-pagination__button o-pagination__button--current" aria-label="Current page, Page 1." aria-current="true">1</button></li>
              <!---->
              <!---->
            </ul>
          </nav>
        </div>
      </div>
    </div>
  </div>
</div>"
`;
